# es-ooms-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  Makefile  Pipfile  README.md  production.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml  renovate.json5
.github/workflows/: dependabot-auto-merge.yaml  dockerimage.yml  main.yaml
ci/: config.yaml
es_oom_exporter/: __init__.py  dmesg.py  es.py  kube.py  main.py  message_reader.py  oom.py  utils.py
tests/: test_dmesg.py
