[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
line_length = 110

[tool.mypy]
python_version = "3.8"
strict_optional = true
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry]
name = "es-oom-exporter"
version = "0.0.0"
description = "Not used"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
prometheus-client = "0.15.0"
kubernetes = "25.3.0"
c2cwsgiutils = { extras = ["standard"], version = "5.1.5" }
cee-syslog-handler = "0.6.0"
pyramid = "2.0"

[tool.poetry.dev-dependencies]
prospector = { version = "1.7.7", extras = ["with_bandit", "with_mypy"] }
types-requests = "2.28.11.2"
pytest = "7.2.0"
mockito = "1.4.0"
typing-extensions = "4.4.0"

[tool.poetry.scripts]
es-oom-exporter = "es_oom_exporter.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
